# XOR-Encryption-Breaker

./: .gitignore  LICENSE  README.md  pyproject.toml  xor_breaker.py
tasks/: lessons.md  todo.md
tests/: test_xor_breaker.py
